# macro-log

./: README.md  cargo.toml
app/: Cargo.toml
app/examples/: read_dir.rs
app/src/: main.rs
macro-log/: Cargo.toml  README.md
macro-log-macros/: Cargo.toml
macro-log-macros/src/: fs.rs  lib.rs
macro-log/src/: lib.rs  log.rs
