[package]
name = "macro-log-macros"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/develon2015/macro-log"
homepage = "https://github.com/develon2015/macro-log"
description = """
The macros-log's proc macros.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }
