[package]
name = "macro-log"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/develon2015/macro-log"
homepage = "https://github.com/develon2015/macro-log"
description = """
Use #[macro_log::debug] to log:
2023-08-11 15:52:59 - [D] - app/src/main.rs:3 -> call fn main()
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"

[dependencies.macro-log-macros]
path = "../macro-log-macros"
version = "0.1.0"
